CHANGELOG

2014-07-08  1.2.9

      * Add new 'get_objects' method to retrieve a list of objects from a single API call
      * Add a helper to perform disjunctive faceting

2014-03-27  1.2.8

      * Catch all exceptions before retrying with another host

2014-03-24  1.2.7

      * Ruby 1.8 compatibility

2014-03-19  1.2.6

      * Raise an exception if no APPLICATION_ID is provided
      * Ability to get last API call errors
      * Ability to send multiple queries using a single API call
      * Secured API keys generation is now based on secured HMAC-SHA256

2014-02-24  1.2.5

      * Ability to generate secured API key from a list of tags + optional user_token
      * Ability to specify a list of indexes targeted by the user key

2014-02-21  1.2.4

      * Added delete_objects

2014-02-10  1.2.3

      * add_object: POST request if objectID is nil OR empty

2014-01-11  1.2.2

      * Expose batch requests

2014-01-07  1.2.1

      * Removed 'jeweler' since it doesn't support platform specific deps (see https://github.com/technicalpickles/jeweler/issues/170)

2014-01-07  1.2.0

      * Removed 'curb' dependency and switched on 'httpclient' to avoid fork-safety issue (see issue #5)

2014-01-06  1.1.18

      * Fixed batch request builder (broken since last refactoring)

2014-01-02  1.1.17

      * Ability to use IP rate limit behind a proxy forwarding the end-user's IP
      * Add documentation for the new 'attributeForDistinct' setting and 'distinct' search parameter

2013-12-16  1.1.16

      * Add arguments type-checking
      * Normalize save_object/partial_update/add_object signatures
      * Force dependencies versions

2013-12-16  1.1.15

      * Embed ca-bundle.crt
      
2013-12-11  1.1.14

      * Added index.add_user_key(acls, validity, rate_limit, maxApiCalls)
	
2013-12-10  1.1.13

      * WebMock integration

2013-12-05  1.1.12

      * Add browse command

2013-11-29  1.1.11

      * Remove rubysl (rbx required dependencies)

2013-11-29  1.1.10
